# WealCome-C--Demo

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  runTests.sh  wealcome_c___demo.cbp
src/: CMakeLists.txt  Makefile  main.cpp  palindrome.cpp  src.cbp  src_run
src/palindromes-store/: palindromesStore.h  palindromesStoreStub.cpp  palindromesStoreStub.h
tests/: CMakeLists.txt  Makefile  PalindromeTest.cpp  cmake_install.cmake  tests.cbp  tests_run
tests/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
tests/lib/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
tests/lib/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
